--- a/src/custodian-vs-non-cust-wallet-dodao-academy.yaml
+++ b/src/custodian-vs-non-cust-wallet-dodao-academy.yaml
@@ -95,7 +95,7 @@ steps:
             key: A
           - content: Account number in banking
             key: B
-          - content: Account pin in banking
+          - content: Account pin/password in banking
             key: C
           - content: It is not comparable to any of these
             key: D
@@ -200,9 +200,9 @@ steps:
         choices:
           - content: Your funds could get converted into another currency unannounced 
             key: A
-          - content: The funds are not backed in a 1:1 ratio and are possible to be misused by the exchange
+          - content: As many of the exchanges are not regulated, the funds might not be backed in a 1:1 ratio and are possible to be misused by the exchange
             key: B
-          - content: They are usually not well regulated
+          - content: They usually don't give the proofs of their reserves, i.e. all the assets held by them in custody
             key: C
           - content: The security of your funds is as safe as the security of the exchange
             key: D
@@ -356,9 +356,9 @@ steps:
           - B
           - C
         choices:
-          - content: IOA
+          - content: IOA (Internally Owned Account) 
             key: A
-          - content: EOA
+          - content: EOA (Externally Owned Account) 
             key: B
           - content: Smart contract account
             key: C
@@ -478,20 +478,14 @@ steps:
     name: Evaluation
     stepItems:
       - answerKeys:
-          - B
-          - C
-          - D
+          - A
         choices:
-          - content: Your funds could get converted into another currency unannounced 
+          - content: "False"
             key: A
-          - content: The funds are not backed in a 1:1 ratio and are possible to be misused by the exchange
+          - content: "True"
             key: B
-          - content: They are usually not well regulated
-            key: C
-          - content: The security of your funds is as safe as the security of the exchange
-            key: D
-        content: Why is it risky to use a custodial wallet?
-        type: MultipleChoice
+        content: KYC verification is needed in non-custodial wallets
+        type: SingleChoice
         uuid: 8a897002-07af-45b0-872c-6c691ab8c01e
       - answerKeys:
           - A
@@ -499,7 +493,7 @@ steps:
         choices:
           - content: All private keys are stored in one place and hence are more susceptible to being hacked
             key: A
-          - content: The private keys could be lost
+          - content: The private keys of an account could be changed 
             key: B
           - content: User could lose their assets in case company makes bad business decisions
             key: C
