update guide Ethereum Token Standards

--- a/src/guides.yaml
+++ b/src/guides.yaml
@@ -11,3 +11,4 @@ guides:
   - proof-of-reserves-dodao-academy.yaml
   - keeping-your-crypto-safe-dodao-academy.yaml
   - custodian-vs-non-cust-wallet-dodao-academy.yaml
+  - ethereum-token-standards-dodao-academy.yaml
