--- a/src/guides.yaml
+++ b/src/guides.yaml
@@ -12,3 +12,4 @@ guides:
   - keeping-your-crypto-safe-dodao-academy.yaml
   - custodian-vs-non-cust-wallet-dodao-academy.yaml
   - ethereum-token-standards-dodao-academy.yaml
+  - layer-2-and-rollups-dodao-academy.yaml
