update guide Optimistic Rollups

--- a/src/guides.yaml
+++ b/src/guides.yaml
@@ -13,3 +13,4 @@ guides:
   - custodian-vs-non-cust-wallet-dodao-academy.yaml
   - ethereum-token-standards-dodao-academy.yaml
   - layer-2-and-rollups-dodao-academy.yaml
+  - optimistic-rollups-dodao-academy.yaml
