--- a/src/optimistic-rollups-dodao-academy.yaml
+++ b/src/optimistic-rollups-dodao-academy.yaml
@@ -1,20 +1,26 @@
 categories:
   - engineering
 content: What are optimistic rollups and the different proof mechanisms
-created: '2022-11-30T00:36:22.685Z'
+created: '2022-11-30T00:38:03.157Z'
 guideIntegrations:
   discordRoleIds: []
 guideType: course
 key: optimistic-rollups-dodao-academy
 name: Optimistic Rollups
 postSubmissionStepContent: >
-  #### Read More
+  #### References
+
 
   https://blog.infura.io/post/validating-bridges-scaling-blockchains 
 
+
   https://stonecoldpat.github.io/images/validatingbridges.pdf
 
+
   https://medium.com/@cpbuckland88/fraud-proofs-and-virtual-machines-2826a3412099
+
+
+  https://twitter.com/krzkaczor/status/1395812319494557702?lang=en
 publishStatus: Live
 showIncorrectOnCompletion: true
 steps:
@@ -123,7 +129,7 @@ steps:
         type: SingleChoice
         uuid: 17f2f4e1-21cf-42f2-a9a2-159989e3fbc5
     uuid: f484ce80-234b-4202-8aa9-041caeee003d
-  - content: >
+  - content: >-
       There are currently two approaches for pinpointing a disputed state
       transition in Optimistic Rollups:
 
@@ -157,9 +163,6 @@ steps:
       Arbitrum's multi-round fraud proof system is a binary search between two
       parties to find the first opcode of a whole block that they disagree on.
       Once found, only this particular opcode is executed on-chain.
-
-
-      https://twitter.com/krzkaczor/status/1395812319494557702?lang=en
     name: Disputes in Optimistic
     stepItems: []
     uuid: a5873128-7fce-4bfc-95a7-a99887a7f987
@@ -183,4 +186,4 @@ steps:
     uuid: f49142fc-eddd-4116-9c25-01f365813d05
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
-uuid: 5aede7a6-9a16-4259-8551-e111436b8eca
+uuid: optimistic-rollups-dodao-academy
