update guide Bridges - Deep Dive

--- a/src/guides.yaml
+++ b/src/guides.yaml
@@ -14,3 +14,4 @@ guides:
   - ethereum-token-standards-dodao-academy.yaml
   - layer-2-and-rollups-dodao-academy.yaml
   - optimistic-rollups-dodao-academy.yaml
+  - bridges-deep-dive-dodao-academy.yaml
