remove the extra guide

--- a/src/dao-treasury-dodao-academy.yaml
+++ b/src/dao-treasury-dodao-academy.yaml
@@ -1,5 +1,5 @@
 categories: []
-content: Understanding how to to mnage treasuries in DAO
+content: Understanding how to manage treasuries in DAO
 created: '2022-11-16T11:20:04.692Z'
 guideIntegrations:
   discordRoleIds: []
